crates/wat-core/tests/snapshots/lexer__snap_single_quote_no_expansion.snap
---
source: crates/wat-core/tests/lexer.rs
expression: "toks(r#\"echo '$HOME'\"#)"
---
[
    Word(
        "echo",
    ),
    Word(
        "\u{2}$HOME\u{2}",
    ),
    Eof,
]
