crates/wat-core/tests/snapshots/lexer__snap_single_quoted.snap
---
source: crates/wat-core/tests/lexer.rs
expression: "toks(\"echo 'hello world'\")"
---
[
    Word(
        "echo",
    ),
    Word(
        "\u{2}hello world\u{2}",
    ),
    Eof,
]
